discussion/kv_engine/174627/174627_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50984: CheckpointList scan is lock-free in CM::scheduleDestruction

Change-Id: I7cbb20768e4581f828e56f8520798b892a730990

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-06-09 09:48:33.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-09 09:52:41.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46721/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46721/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39269/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39269/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7792/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7792/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19067/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19067/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7688/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7688/ )

Clang linker error: linker command failed due to signal (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7688/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20222/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20222/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20872/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20872/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28262/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28262/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19873/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19873/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18030/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:551:62: error: no member named "getNumMetaItems" in "Checkpoint"; did you mean "getNumItems"? [clang-diagnostic-error]
    numItems.fetch_sub(checkpoint.getNumItems() + checkpoint.getNumMetaItems());
                                                             ^~~~~~~~~~~~~~~
                                                             getNumItems
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.h:301:12: note: "getNumItems" declared here
    size_t getNumItems() const {
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18030/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:551:62:
error: no member named "getNumMetaItems" in "Checkpoint"; did you mean "getNumItems"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18030/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17090/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
